...
                message: 'Your password must have at least 8 characters',
              },
            })}
          />
          <View>
            <Link
              testID="login-forgot-password-link"
              style={{
                color: colors.dangerLight,
                fontSize: fontSizes.md,
                marginLeft: 'auto',
              }}
              href="/(auth)/forgot-password"
...
